# TextEditor

./: .gitignore  CMakeLists.txt  exampleFile.txt
libgraphics/: cmakelists.txt  graphics.c  imgui.c  imgui.h
src/: charsupport.c  charsupport.h  display.c  display.h  edit.c  edit.h  file.c  file.h  keyboardsupport.c  keyboardsupport.h  main.c  middleware.c  middleware.h  model.c  model.h  mousesupport.c  mousesupport.h  timersupport.c  timersupport.h
